Fade load indicator in to avoid initial flickering when insets are loaded within a blink

--- a/src/Insets2dTrack.module.scss
+++ b/src/Insets2dTrack.module.scss
@@ -127,6 +127,7 @@ $slow:   0.6s;
 
 .inset-load-indicator {
   position: absolute;
+  z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -145,6 +146,9 @@ $slow:   0.6s;
   border-radius: 1rem;
   background: rgba(0, 0, 0, 0.2);
   overflow: visible;
+  animation: pulse-init 0.25s $ease 0.25s 1 forwards;
+  opacity: 0;
+  transform: scale(0);
 
   &::before {
     content: '';
@@ -157,8 +161,20 @@ $slow:   0.6s;
     background-color: inherit;
     border-radius: inherit;
     transition: opacity .3s, transform .3s;
-    animation: pulse-animation 2s $ease infinite;
+    animation: pulse-init 2s $ease infinite,
+               pulse-animation 2s $ease infinite;
     z-index: -1;
+  }
+}
+
+@keyframes pulse-init {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
   }
 }
 
@@ -293,7 +309,7 @@ $slow:   0.6s;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  animation: fade-in $fast $ease;
+  animation: fade-in $normal $ease;
   transform: translateZ(0);
 }
 
